# BB10-WebWorks-Framework

./: .gitmodules  .jshintignore  .jshintrc  Jakefile  README.md  configure  licenses.txt  pom.xml  styles.css  uriPrefix
dependencies/bootstrap/: index.html
dependencies/bps_thread/: BPSEventHandler.hpp  BPSMaster.cpp  BPSMaster.hpp  CMakeLists.txt  configure-qsk
dependencies/configure-qsk/: configure-qsk
dependencies/require/: require.js
ext/app/: client.js  index.js  manifest.json
ext/bbm.platform/: client.js  index.js
ext/blackberry.app/: index.js  navEvents.js
ext/blackberry.capture/: cameraEvents.js  client.js  index.js
ext/blackberry.connection/: connectionEvents.js  index.js
ext/blackberry.invoke/: client.js  index.js
ext/blackberry.invoked/: index.js
ext/blackberry.ui.contextmenu/: index.js
ext/connection/: client.js  index.js  manifest.json
ext/event/: client.js  manifest.json
ext/identity/: client.js  manifest.json
ext/invoke/: client.js  manifest.json
ext/invoked/: client.js  index.js  manifest.json
ext/io/: client.js
ext/io.filetransfer/: client.js  manifest.json
ext/pim.contacts/: Contact.js  ContactActivity.js  ContactAddress.js  ContactError.js  ContactField.js  ContactFindOptions.js  ContactNews.js  ContactOnlineStatus.js  ContactOrganization.js  ContactPhoto.js  client.js  (+1 more)
ext_sample/: README.md
extension_template/: README.md
lib/: chromeWebview.js  controllerWebView.js  event.js  framework.js  jnext.js  overlayWebView.js  request.js  rotation.helper.js  server.js  utils.js  webview.js
ui-resources/: ui.html
(+122 files in other folders)
